# Physics3D

./: .gitignore  CMakeLists.txt  README.md  freeglut.cmake  glew.cmake  googletest.cmake  runnable.cpp  sdl2.cmake
application/: CMakeLists.txt
application/include/application/: application.hpp  window.hpp  window_listener.hpp  window_renderer.hpp
application/src/application/: application.cpp  window.cpp
common/: CMakeLists.txt
common/include/common/: assert.hpp  bit_utils.hpp  logging.hpp  random.hpp  time_utils.hpp  transform.hpp  transformable.hpp
common/include/common/math/: mat3.hpp  quat.hpp  vec3.hpp
common/src/: lodepng.cpp  logging.cpp  mat3.cpp  quat.cpp  rand.cpp  random.cpp  time_utils.cpp  timer.cpp  transform.cpp  vec2.cpp  vec3.cpp
common/test/: math_test.cpp
engine/: CMakeLists.txt
engine/include/engine/: assert.hpp  collision.hpp  timer.hpp  utils.hpp  world.hpp
engine/include/engine/collision/: bounding_volume.hpp  collider.hpp  collision_engine.hpp  shape.hpp  tree.hpp
engine/include/engine/geometry/: bounding_box.hpp  collision.hpp  shape.hpp  transform.hpp  utils.hpp
engine/include/engine/model/: material.hpp  object.hpp
engine/include/engine/model/objects/: box.hpp  polyhedron.hpp  sphere.hpp
engine/include/engine/physics/: arbiter.hpp  constraint.hpp  constraints.hpp  inertia.hpp  material.hpp  object.hpp  physics_engine.hpp
engine/src/: bounding_box.cpp  box.cpp  collision.cpp  material.cpp  object.cpp  polyhedron.cpp  sphere.cpp  timer.cpp  utils.cpp  world.cpp
engine/src/collision/: bounding_volume.cpp  collider.cpp  collision_engine.cpp  shape.cpp  tree.cpp
engine/src/geometry/: bounding_box.cpp  collision.cpp  shape.cpp  transform.cpp  utils.cpp
engine/src/physics/: arbiter.cpp  constraint.cpp  inertia.cpp  material.cpp  object.cpp  physics_engine.cpp
engine/test/: collision_test.cpp  run.cpp  test_collision.cpp  test_collision_ddt.cpp  test_shape.cpp
lib/SDL2/: sdl2-config.cmake
lib/imgui/: CMakeLists.txt
lib/imgui/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl2.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
math/: CMakeLists.txt
math/include/math/: mat3.hpp  mat4.hpp  quat.hpp  vec2.hpp  vec3.hpp  vec3i.hpp
math/src/: mat3.cpp  mat4.cpp  quat.cpp  rand.cpp  vec2.cpp  vec3.cpp  vec3i.cpp
math/test/: math_test.cpp
preview/: CMakeLists.txt
preview/shaders/: main_frag.glsl  main_vert.glsl  post_frag.glsl  post_vert.glsl  rt_frag.glsl  rt_vert.glsl
preview/src/: debug_ui.cpp  debug_ui.hpp  game_renderer.cpp  game_renderer.hpp  runnable.cpp
preview/src/algorithms/: fenwick_tree.cpp  fenwick_tree.hpp
preview/src/controls/: camera.cpp  camera.hpp  controls.cpp  controls.hpp
preview/src/game/voxel/: voxel_object.cpp  voxel_object.hpp  voxel_texture_manager.cpp  voxel_texture_manager.hpp  voxel_world.cpp  voxel_world.hpp
preview/src/pipeline_gl/: pipeline_gl.cpp  pipeline_gl.hpp
src/: main.cpp  utils.cpp  utils.h
src/engine/: world.cpp  world.h
src/global/: controls.cpp  controls.h  drawing.cpp  drawing.h  graphics.cpp  graphics.h
src/math/: color.cpp  color.h  mat.cpp  mat.h  quat.cpp  quat.h  vec3.cpp  vec3.h
src/model/: bounding_box.cpp  bounding_box.h  box.cpp  box.h  color.cpp  color.h  material.h  object.cpp  object.h  polyhedron.cpp  polyhedron.h  sphere.cpp  sphere.h
viewer/: CMakeLists.txt
viewer/include/viewer/: controls.hpp  drawing.hpp  material.hpp
viewer/src/: controls.cpp  drawing.cpp  graphics.cpp  material.cpp
